--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Max Schoening <max@max.wtf>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "actions-toolkit": "0.0.4"
+  }
 }
